Day 3 color changer completed updated

--- a/ColorGenerator/index.css
+++ b/ColorGenerator/index.css
@@ -27,9 +27,10 @@
     color: rgb(var(--color));
 }
 
-.color{
+.colortxt{
     font-size: 30px;
     font-family: 'Courier New', Courier, monospace;
+    color: rgb(var(--color));
 }
 
 .btn{
